# strange-facility

./: Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
src/: app.rs  demo_app.rs  game.rs  jobs.rs  main.rs  view.rs  view_logic.rs
src/core/: amount.rs  job.rs  mod.rs  resource.rs
src/view/: app.rs  mod.rs  view.rs  view_logic.rs
