[package]
name = "strange-facility"
version = "4.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[target.'cfg(target_arch = "wasm32")'.dependencies]
[dependencies]
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
web-sys = "0.3"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
gloo = "0.11"
wasm-logger = "0.2.0"
log = "0.4.19"


#[workspace]
#members = ["src-tauri"]